--- a/Html/Index.html
+++ b/Html/Index.html
@@ -630,6 +630,11 @@
               JavaScript. It showcases my skills, projects, and serves as a
               professional online presence.
             </p>
+            <p>
+              A personal portfolio website created using HTML, CSS, and
+              JavaScript. It showcases my skills, projects, and serves as a
+              professional online presence.
+            </p>
           </div>
         </div>
 
