--- a/Html/Index.html
+++ b/Html/Index.html
@@ -749,7 +749,7 @@
         <div>
           <div class="resume">
             <h3 style="margin-bottom: 60px">Tech Resume</h3>
-            <a href="AnilNunnagopula_Resume.pdf" target="_blank">View Resume</a>
+            <a href="AnilNunnagopula Resume.pdf" target="_blank">View Resume</a>
           </div>
 
           <div class="resume">
