--- a/Html/Index.html
+++ b/Html/Index.html
@@ -104,7 +104,7 @@
         justify-content: space-around;
         align-items: center;
         /* background-color: rgb(9, 9, 68); */
-        background-color: #34495e;
+        background-color: #2c3e50;
         color: white;
       }
       .purpleName {
@@ -133,8 +133,8 @@
         padding: 60px 10px;
         /* padding-left: 10px;
         padding-right: 10px; */
-        /* background-color: #2c3e50; */
-        background-color: #34495e;
+        background-color: #2c3e50;
+        /* background-color: #34495e; */
         color: white;
         font-family: Arial, sans-serif;
         text-align: center;
@@ -162,7 +162,7 @@
       }
 
       .education-box {
-        background-color: #34495e;
+        background-color: #2c3e50;
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -207,11 +207,11 @@
 
       #Skills {
         /* max-width: 800px;
-        margin: 50px auto;
-        background-color: white;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        border-radius: 10px; */
-        padding: 60px 10px;
+        margin: 50px auto; */
+        background-color: #2c3e50;
+        /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        padding: 60px 10px; */
         margin: 0;
         text-align: center;
       }
@@ -386,6 +386,14 @@
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
+      .resume-container {
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        flex-wrap: wrap;
+        gap: 40px;
+      }
+
       .resume a {
         background-color: rgb(89, 179, 89);
         color: white;
@@ -864,13 +872,14 @@
 
       <section id="Resume">
         <h2>Resume</h2>
-        <div>
-          <div class="resume">
+
+        <div class="resume-container">
+          <div class="resume" style="height: auto; width: 50%">
             <h3 style="margin-bottom: 60px">Tech Resume</h3>
             <a href="AnilNunnagopula Resume.pdf" target="_blank">View Resume</a>
           </div>
 
-          <div class="resume">
+          <div class="resume" style="height: auto; width: 50%">
             <h3 style="margin-bottom: 60px">Core Resume</h3>
             <a href="AnilNnnagopula_ResumeCE.pdf" target="_blank"
               >View Resume</a
