added intellihint project

--- a/Html/Index.html
+++ b/Html/Index.html
@@ -86,7 +86,7 @@
 
       .right ul li a:hover {
         color: #fff;
-        background-color: #e64c4c; 
+        background-color: #e64c4c;
         transform: scale(1.05);
       }
       /* for mobie view nav bar  */
@@ -978,6 +978,76 @@
                 <strong>Repo:</strong>
                 <a
                   href="https://github.com/anilnunnagopula/mixorix"
+                  target="_blank"
+                  style="color: #38bdf8; text-decoration: underline"
+                  >GitHub</a
+                >
+                |
+                <strong>Live:</strong>
+                <span style="color: #f87171">Coming Soon</span>
+              </li>
+            </ul>
+          </div>
+          <!-- IntelliHint Project -->
+          <div
+            class="project"
+            style="
+              background-color: #1f2937;
+              padding: 20px;
+              border-radius: 10px;
+              margin-bottom: 30px;
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+              color: #f9fafb;
+            "
+          >
+            <h4 style="color: #22d3ee; font-size: 1.5rem; margin-bottom: 10px">
+              IntelliHint 🧠💡 (Just Born)
+            </h4>
+            <p style="font-size: 1rem; color: #e5e7eb; line-height: 1.6">
+              A next-gen AI-powered learning assistant built for coders,
+              students, and interview prep warriors. IntelliHint helps users
+              <strong
+                >understand problems, dry run logic, detect patterns</strong
+              >, and get progressive hints — all without spoiling the solution.
+              Designed to make you think, not memorize.
+            </p>
+            <ul
+              style="
+                text-align: left;
+                margin: 0px auto 0;
+                max-width: 800px;
+                font-size: 0.95rem;
+                line-height: 1.6;
+                color: #d1d5db;
+              "
+            >
+              <li>
+                <strong>✨ Features (planned):</strong> Step-by-step AI
+                explanations, topic & pattern identification, dry run
+                visualizer, unlockable hint system, and motivational learning
+                UX. PDF export for hints + explanation. Built with
+                education-first design.
+              </li>
+              <li>
+                <strong>Frontend:</strong> React.js, Tailwind CSS, React Router
+                v6, Framer Motion, CodeMirror, Context API
+              </li>
+              <li>
+                <strong>Backend:</strong> Node.js, Express, MongoDB, JWT, Python
+                (Flask/FastAPI) for AI model orchestration
+              </li>
+              <li>
+                <strong>AI Models:</strong> GPT-4 (via OpenAI), LangChain for
+                stepwise logic generation, fine-tuned future scope using
+                LeetCode datasets
+              </li>
+              <li>
+                <strong>Status:</strong> 💥 Just Planning to build  
+              </li>
+              <li>
+                <strong>Repo:</strong>
+                <a
+                  href="https://github.com/anilnunnagopula/intellihint"
                   target="_blank"
                   style="color: #38bdf8; text-decoration: underline"
                   >GitHub</a
