--- a/Html/Index.html
+++ b/Html/Index.html
@@ -837,7 +837,7 @@
                 |
                 <strong>Live:</strong>
                 <a
-                  href="https://connectinghostels.netlify.app"
+                  href="https://connectinghostels1.netlify.app"
                   target="_blank"
                   style="color: #34d399; text-decoration: underline"
                   >View Project</a
