added enhanced file

--- a/Html/Index.html
+++ b/Html/Index.html
@@ -1285,8 +1285,10 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed("#element", {
-        strings: ["Coder and Web Developer..."],
+        strings: ["Coder and Web Developer...!", "AI & ML Enthusiast...!", "Civil Engineer..."],
         typeSpeed: 50,
+        backSpeed: 30,
+        loop: true,
       });
       // Automatically navigate to the Home section on page refresh
       window.onload = function () {
