added enhanced file

--- a/Html/Index.html
+++ b/Html/Index.html
@@ -737,7 +737,7 @@
                 text-align: left;
                 margin: 0px auto 0;
                 max-width: 800px;
-                ont-size: 0.95rem;
+                font-size: 0.95rem;
                 line-height: 1.6;
                 color: #d1d5db;
               "
